--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:MZ1IcEWge4bgdowkBqPmEYpbWCtA2iS1ENDOJNV3ISw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=activitydb
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=null
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
